objects/GP_Aviso_Vencimiento__c.object
<CustomObject>
    <fields>
        <fullName>Apellido_Cliente__c</fullName>
        <formula>Cuenta__r.vlocity_cmt__PrimaryContactId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GP Avisos Vencimiento</relationshipLabel>
        <relationshipName>GP_Avisos_Vencimiento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Cliente__c</fullName>
        <formula>Cuenta__r.vlocity_cmt__PrimaryContactId__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Cuenta__r.vlocity_cmt__PrimaryContactId__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Cliente__c</fullName>
        <formula>Cuenta__r.vlocity_cmt__PrimaryContactId__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntos_que_vencen__c</fullName>
        <label>Puntos que vencen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GP Aviso Vencimiento</label>
    <nameField>
        <label>GP Aviso Vencimiento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Avisos Vencimiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>